# simple-kmeans

./: LICENSE  README.md  simple-kmeans.cabal
app/: Main.hs
src/: SimpleKmeans.hs
