name:                simple-kmeans
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
copyright:           2018 Gautier DI FOLCO
category:            Kata
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleKmeans
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable simple-kmeans-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , simple-kmeans
                     , random
                     , optparse-applicative
                     , criterion
  default-language:    Haskell2010
